# verilog-lang

./: Cargo.toml  README.md  verilog-subset.ebnf
src/: diagnostic.rs  lexer.rs  lib.rs  parser.rs
src/ast/: attribute.rs  identifier.rs  mod.rs  module.rs
src/ast/declarations/: declaration_data_types.rs  declaration_lists.rs  declaration_ranges.rs  declaration_types.rs  mod.rs
src/ast/expressions/: mod.rs  numbers.rs
src/ast/general/: attributes.rs  identifiers.rs  mod.rs
src/ast/source_text/: mod.rs  module_items.rs  module_parameters_ports.rs  systemverilog_source_text.rs
src/examples/: lex.rs  parse.rs
testcase/bad/: no-endmodule.v  no-endmodule.v.diag
testcase/good/: adder.v  adder.v.ast  array.v  array.v.ast  register.v  register.v.ast
verilog-lang-wasm/: Cargo.toml
verilog-lang-wasm/src/: lib.rs
