[package]
name = "verilog-lang"
version = "0.1.0"
authors = ["Jiajie Chen <noc@jiegec.ac.cn>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strcursor = "0.2.5"
regex = "1.6.0"
lazy_static = "1.4.0"
serde = { version = "1.0.144", features = ["derive"] }

[dev-dependencies]
paw = "1.0.0"
structopt = { version = "0.3.26", features = ["paw"] }

[[example]]
name = "lex"
path = "src/examples/lex.rs"

[[example]]
name = "parse"
path = "src/examples/parse.rs"
